--- a/nginx/rootfs/etc/nginx/conf.d/default.conf
+++ b/nginx/rootfs/etc/nginx/conf.d/default.conf
@@ -17,7 +17,7 @@ server {
   access_log /var/log/nginx/nginx_access.log;
 
   location / {
-      proxy_pass http://nuxt-generate:3000;
+      proxy_pass http://localhost:3000/;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
