--- a/cubemetr/package.json
+++ b/cubemetr/package.json
@@ -13,6 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
