--- a/cubemetr/package.json
+++ b/cubemetr/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "read-excel-file": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
